--- a/css/hader.css
+++ b/css/hader.css
@@ -1,9 +1,14 @@
 #header{
+    width: 600px;
     height: 100px;
     display: flex;
-    justify-content: flex-end;
-    font-size: 24px;
+    justify-content: space-between;
+
+    font-size: 1.1em;
     text-align: center;
     line-height: 100px;
+    margin: 4rem auto;
+
 
 }
+
