contruindo html e css, primeira tela feita

--- a/css/hader.css
+++ b/css/hader.css
@@ -7,8 +7,13 @@
     font-size: 1.1em;
     text-align: center;
     line-height: 100px;
-    margin: 4rem auto;
-
-
+    margin: 2.5rem auto;
 }
 
+#Fast{
+    color: #105788;
+}
+
+#Parking{
+    color: #DBC403;
+}
