--- a/css/main.css
+++ b/css/main.css
@@ -127,5 +127,64 @@
 .input-form:focus {
     border: 2px solid #1fb6ff;
 }
-
+/* ********* */
 /* FORMULÁRIO PREÇO */
+#container-price{
+    width: calc(40px + 40vw);
+    display: flex;
+    flex-direction: column;
+    
+    border: solid 2px black;
+    
+    margin: 150px auto;
+    border-radius: 5px;
+}
+
+#container-price header{
+    padding: 10px;
+    
+}
+
+#container-price h1{
+    border-bottom: solid 1.5px rgba(63, 63, 63, 0.849) ;
+}
+
+#form-price{
+    display: flex;
+    flex-direction: column;
+    
+    gap: 30px;
+    margin: 40px auto;
+}
+
+#form-price div{
+    width: 350px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+} 
+
+#footer-price{
+    display: flex;
+    margin: 0 auto 30px;
+    gap: 60px;
+}
+/* ********* */
+/* COMPROVANTE */
+#container-receipt{
+    width: calc(40px + 40vw);
+    display: flex;
+    flex-direction: column;
+    
+    margin: 50px auto;
+    border-radius: 5px;
+}
+
+#container-receipt header{
+    padding: 10px;
+    
+}
+
+#container-receipt h1{
+    border-bottom: solid 1.5px rgba(63, 63, 63, 0.849) ;
+}
